--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: variants 
 Title: Annotating Genomic Variants
-Version: 1.1.0
+Version: 1.1.1
 Date: 2017-09-05
 Authors@R: person(role="cre", "Bioconductor Package Maintainer", email = "maintainer@bioconductor.org")
 Description: Read and write VCF files. Identify structural location of variants and compute amino acid coding changes for non-synonymous variants. Use SIFT and PolyPhen database packages to predict consequence of amino acid coding changes 
@@ -15,7 +15,7 @@ License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
-biocViews: VariantAnnotation, GenomicVariation 
+biocViews: AnnotationWorkflow, Workflow
 Suggests: knitr, rmarkdown
 NeedsCompilation: no
 URL: https://www.bioconductor.org/help/workflows/variants/
